; ModuleID = '/home/carl/AnghaBench/torch7/lib/luaT/extr_luaT.c_luaT_registeratname.c'
source_filename = "/home/carl/AnghaBench/torch7/lib/luaT/extr_luaT.c_luaT_registeratname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.luaL_Reg = type { i32 }

@LUA_TTABLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @luaT_registeratname(i32* %0, %struct.luaL_Reg* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.luaL_Reg*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.luaL_Reg* %1, %struct.luaL_Reg** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @lua_gettop(i32* %8)
  store i32 %9, i32* %7, align 4
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* @LUA_TTABLE, align 4
  %13 = call i32 @luaL_checktype(i32* %10, i32 %11, i32 %12)
  %14 = load i32*, i32** %4, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = call i32 @lua_pushstring(i32* %14, i8* %15)
  %17 = load i32*, i32** %4, align 8
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @lua_rawget(i32* %17, i32 %18)
  %20 = load i32*, i32** %4, align 8
  %21 = call i64 @lua_isnil(i32* %20, i32 -1)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %40

23:                                               ; preds = %3
  %24 = load i32*, i32** %4, align 8
  %25 = call i32 @lua_pop(i32* %24, i32 1)
  %26 = load i32*, i32** %4, align 8
  %27 = load i8*, i8** %6, align 8
  %28 = call i32 @lua_pushstring(i32* %26, i8* %27)
  %29 = load i32*, i32** %4, align 8
  %30 = call i32 @lua_newtable(i32* %29)
  %31 = load i32*, i32** %4, align 8
  %32 = load i32, i32* %7, align 4
  %33 = call i32 @lua_rawset(i32* %31, i32 %32)
  %34 = load i32*, i32** %4, align 8
  %35 = load i8*, i8** %6, align 8
  %36 = call i32 @lua_pushstring(i32* %34, i8* %35)
  %37 = load i32*, i32** %4, align 8
  %38 = load i32, i32* %7, align 4
  %39 = call i32 @lua_rawget(i32* %37, i32 %38)
  br label %40

40:                                               ; preds = %23, %3
  %41 = load i32*, i32** %4, align 8
  %42 = load %struct.luaL_Reg*, %struct.luaL_Reg** %5, align 8
  %43 = call i32 @luaT_setfuncs(i32* %41, %struct.luaL_Reg* %42, i32 0)
  %44 = load i32*, i32** %4, align 8
  %45 = call i32 @lua_pop(i32* %44, i32 1)
  ret void
}

declare dso_local i32 @lua_gettop(i32*) #1

declare dso_local i32 @luaL_checktype(i32*, i32, i32) #1

declare dso_local i32 @lua_pushstring(i32*, i8*) #1

declare dso_local i32 @lua_rawget(i32*, i32) #1

declare dso_local i64 @lua_isnil(i32*, i32) #1

declare dso_local i32 @lua_pop(i32*, i32) #1

declare dso_local i32 @lua_newtable(i32*) #1

declare dso_local i32 @lua_rawset(i32*, i32) #1

declare dso_local i32 @luaT_setfuncs(i32*, %struct.luaL_Reg*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
